<resources>
    <string name="app_name">ViewNext</string>
    <string name="txt_estado_solicitud_autoconsumo">Estado solicitud autoconsumo</string>
    <string name="txt_detalles_PopPup">El tiempo estimado de activación de tu autoconsumo es de 1 a 2 meses, este variará en función de tu comunidad autónoma y distribuidora</string>
    <string name="btn_Aceptar">Aceptar</string>
    <string name="txt_Estado_solicitud">Estado solicitud alta de consumidor</string>
    <string name="txt_placeholder">Placeholder</string>
    <string name="txt_cau">CAU (Código Autoconsumo)</string>
    <string name="txt_tipo_de_autoconsumo">Tipo de autoconsumo</string>
    <string name="txt_compensaci_n_de_excedentes">Compensación de excedentes</string>
    <string name="txt_potencia_de_instalaci_n">Potencia de instalación</string>
    <string name="txt_mensaje_energia">Estamos trabajando en mejorar la App. Tus paneles solares siguen produciendo, en breve podrás seguir viendu tu produccion sola. Sentimos las molestias.</string>
    <string name="btn_filtrar_facturas">Filtrar facturas</string>
    <string name="txt_con_fecha_de_emisi_n">Con fecha de emisión</string>
    <string name="txt_desde">Desde:</string>
    <string name="txt_desde_fecha">01/01/2018</string>
    <string name="txt_hasta_fecha">12/06/2024</string>
    <string name="txt_hasta">Hasta:</string>
    <string name="txt_por_un_importe">Por un importe</string>
    <string name="txt_1">1</string>
    <string name="txt_300">300</string>
    <string name="txt_por_estado">Por estado</string>
    <string name="txt_pagadas">Pagadas</string>
    <string name="txt_anuladas">Anuladas</string>
    <string name="txt_cuota_fija">Cuota fija</string>
    <string name="txt_pendientes_de_pago">Pendientes de pago</string>
    <string name="txt_plan_de_pago">Plan de pago</string>
    <string name="btn_eliminar_filtros">Eliminar Filtros</string>
    <string name="btn_filtrar">Filtrar</string>
    <string name="txt_correo_electr_nico">Correo electrónico</string>
    <string name="txt_mensaje_info">A continuación se le enviará un mensaje al correo que ha indicado con las instrucciones para que pueda recuperar sus datos de inicio de sesión</string>
    <string name="btn_enviar_correo">Enviar correo</string>
    <string name="txt_tambi_n_puedes">También puedes</string>
    <string name="txt_iniciar_sesi_n">Iniciar sesión</string>
    <string name="txt_texto_instalacion">Aqui tienes los datos de tu instalación fotovoltaica en tiempo real</string>
    <string name="txt_autoconsumo">Autoconsumo:</string>
    <string name="txt_porcentaje">92%</string>
    <string name="txt_spinner_retromock">Retromock</string>
    <string name="titulo_filtro">Filtro</string>
    <string name="titulo_facturas">Facturas</string>
    <string name="campo_contrase_a">Contraseña</string>
    <string name="campo_correo_electronico">Correo electronico</string>
    <string name="btn_recordar_contrase_a">Recordar contraseña</string>
    <string name="txt_he_olvidado_mis_datos">He olvidado mis datos</string>
    <string name="btn_entrar">Entrar</string>
    <string name="txt_registrarse">Registrarse</string>
    <string name="titulo_pr_cticas_android">Prácticas Android</string>
    <string name="btn_pr_ctica_1">Práctica 1</string>
    <string name="btn_pr_ctica_2">Práctica 2</string>
    <string name="btn_abrir_navegador_externo">Abrir Navegador Externo</string>
    <string name="btn_abrir_webview">Abrir Webview</string>
    <string name="btn_cerrar_sesion">Cerrar sesión</string>
    <string name="campo_usuario">Usuario</string>
    <string name="titulo_smart_solar">Smart Solar</string>
</resources>