<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Activity.Practicas.Practica1.ListaFacturas_Activity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="204dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_logo_iberdrola_cli"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/campo_correo_electronico"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <EditText
        android:id="@+id/editTextContraseña"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/campo_contrase_a"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageViewPassword"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="-50dp"/>

    <ImageButton
        android:id="@+id/imageViewPassword"
        android:layout_width="48dp"
        android:layout_height="34dp"
        android:background="@android:color/transparent"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_ojo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextContraseña" />

    <CheckBox
        android:id="@+id/checkBoxRecordar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_recordar_contrase_a"
        android:checked="false"
        app:layout_constraintTop_toBottomOf="@+id/editTextContraseña"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>


    <TextView
        android:id="@+id/textViewOlvidadoDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_he_olvidado_mis_datos"
        android:background="@drawable/text_underline"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRecordar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonEntrar"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="285dp"
        android:layout_height="51dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="@color/verdePistacho"
        android:text="@string/btn_entrar"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/white"
        app:strokeColor="@color/verdePistacho"
        app:strokeWidth="2dp" />

    <LinearLayout
        android:id="@+id/linearLayoutO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.906">


        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/txt_tambi_n_puedes"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#B6B6B6"
             />


        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonRegistrar"
        android:layout_width="282dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:text="@string/txt_registrarse"
        android:textColor="@color/verdePistacho"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutO"
        app:rippleColor="@color/verdePistacho"
        app:strokeColor="@color/verdePistacho"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
