<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Activity.Practicas.Practica1.ListaFacturas_Activity">



    <TextView
        android:id="@+id/textViewInstrucciones"
        android:layout_width="353dp"
        android:layout_height="39dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_texto_instalacion"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAutoconsumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/txt_autoconsumo"
        android:textColor="#AAAAAA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewInstrucciones" />

    <TextView
        android:id="@+id/textViewNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="48dp"
        android:text="@string/txt_porcentaje"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/textViewAutoconsumo"
        app:layout_constraintTop_toBottomOf="@id/textViewInstrucciones" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="379dp"
        android:layout_height="339dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/grafico_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAutoconsumo" />

</androidx.constraintlayout.widget.ConstraintLayout>
